Fixed the day name labels not being aligned to the middle vertically, and increase the day size.

--- a/src/heat.js.scss
+++ b/src/heat.js.scss
@@ -24,7 +24,7 @@
     --heat-js-day-background-color-hover: var(--heat-js-container-border-color);
     --heat-js-day-spacing: 6.3px;
     --heat-js-day-opacity-hover: 0.7;
-    --heat-js-day-size: 0.85rem;
+    --heat-js-day-size: 1.1rem;
 
     // Days - Colors
     --heat-js-day-color-1-background-color: rgba( 57, 211, 83, 0.25 );
@@ -187,6 +187,9 @@ div.heat-js {
                     text-align: left !important;
                     height: var(--heat-js-day-size);
                     margin-bottom: var(--heat-js-day-spacing);
+                    display: inline-flex;
+                    justify-content: center;
+                    flex-direction: column;
                 }
             }
         
